Fixed image css being too wide.

--- a/assets/main.css
+++ b/assets/main.css
@@ -74,3 +74,9 @@
 .card-img-top {
     text-align: center;
 }
+
+.img-fluid {
+    max-width: 800px;
+    /*max-height: 1050px;*/
+    height: auto
+}
